[package]
name = "rtlc"
version = "0.1.0"
edition = "2021"
description = "The compiler stack of Rattle"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell.git", features = [
  "llvm18-0",
] }
rtl_parser = { path = "../rtl_parser" }
tokio = { version = "1.38.0", features = ["macros", "full"] }
